log/build_2025-11-27_12-18-12/my_first_package/stderr.log
  File "/home/shcho/ros2_ws2/install/my_first_package/lib/python3.10/site-packages/my_first_package/scan_publisher.py", line 52
    super().__init__('
                     ^
SyntaxError: unterminated string literal (detected at line 52)

